--- a/templates/index.html
+++ b/templates/index.html
@@ -13,15 +13,32 @@
           href="{{ url_for('static', filename='favicon/favicon-96x96.png') }}">
     <link rel="icon" type="image/png" sizes="16x16"
           href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"  defer></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
     <script type="module" src="{{ url_for('static', filename='js/main.js') }}" defer></script>
 </head>
 {% include 'login_panel.html' %}
+
 <body>
 <div class="center "><a href="/"><img alt="logo" src="/static/images/proman.png"
                                       width="20%" height="20%"></a></div>
 <div id="root"></div>
+
+
+
+
 </body>
+<footer>
+    {% block footer %}
+        <div class="center">
+            <footer id="footer">
+                <marquee behavior="scroll" direction="left">
+                    <col-pro>PRO</col-pro>
+                    <col-man>MAN</col-man>
+                    Project CodeCool 2022 Krzysztof Król & Aleksander Dudziński
+                </marquee>
+            </footer>
+        </div> {% endblock %}
+</footer>
 </html>
