add connect to postgresql with node.js and  query read postgresqsl database

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,17 @@
 <body>
 <div class="center "><a href="/"><img alt="logo" src="/static/images/proman.png"
                                       width="20%" height="20%"></a></div>
+
+
+
+<div class="board-container">
+    <button class="add-board-button" >Add Board</button>
+    <label>
+        <input type="text" id="input-new-board-title" required placeholder="Enter New Board title" hidden>
+    </label>
+    <button id="board-add" type="submit">Create Board</button>
+    <div class="card-container"></div>
+</div>
 <div id="root"></div>
 
 
