--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@
     background-color: green;
 }
 body{
-    background-color: #085900;
+    /*background-color: #085900;*/
 
 }
 
@@ -11,7 +11,7 @@ body{
     background-color: #c4c4c4;
     display: flex;
     flex-direction: column;
-
+    border-radius: 1em;
     height: 100vh;
     padding-left: 15px;
 
